--- a/www.topmonks.cz/src/stylesheets/meet-us.scss
+++ b/www.topmonks.cz/src/stylesheets/meet-us.scss
@@ -101,7 +101,7 @@
   .tm-events_text {
     padding: 0 24px 24px;
   }
-  &.box img {
+  .box img {
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
   }
