[www.ingridapp.io] Added favicons and removed unnecessary fonts

--- a/www.ingridapp.io/src/html/layouts/ingrid.njk
+++ b/www.ingridapp.io/src/html/layouts/ingrid.njk
@@ -10,30 +10,20 @@
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   {% block head %}{% endblock %}
   <meta name="author" content="TopMonks s.r.o." />
-  <link rel="icon" href="/assets/img/favicon.png" type="image/png" />
-  <!-- Bootstrap core CSS -->
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200&amp;family=Lato&amp;family=Muli&amp;display=swap" rel="stylesheet">
   <link
     href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
     rel="stylesheet"
   />
 
-  <!-- Custom fonts for this template -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"
-  />
-  <link
-    type="text/css"
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css"
-  />
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200&amp;family=Lato&amp;family=Muli&amp;display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5f3b82">
+  <meta name="msapplication-TileColor" content="#5f3b82">
+  <meta name="theme-color" content="#ffffff">
 
-  <!-- Google Tag Manager -->
   <script>
     (function(w, d, s, l, i) {
       w[l] = w[l] || [];
@@ -74,7 +64,9 @@
       aria-label="Toggle navigation"
     >
       Menu
-      <i class="fa fa-bars" style="margin-left: 5px;"></i>
+      <svg height="32" width="32" xmlns="http://www.w3.org/2000/svg">
+        <path d="M4 10h24a2 2 0 000-4H4a2 2 0 000 4zm24 4H4a2 2 0 000 4h24a2 2 0 000-4zm0 8H4a2 2 0 000 4h24a2 2 0 000-4z"/>
+      </svg>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
