--- a/www.ingridapp.io/src/stylesheets/_promo.scss
+++ b/www.ingridapp.io/src/stylesheets/_promo.scss
@@ -10,14 +10,6 @@
   }
 
   img {
-    @media screen and (min-width: 1024px) {
-      width: 640px;
-    }
-    @media (min-width: 768px) and (max-width: 1023px) {
-      width: 560px;
-    }
-    @media (max-width: 767px) {
-      width: 200px;
-    }
+    max-width: 640px;
   }
 }
