[www.ingridapp.io] Move scripts to layout

--- a/www.ingridapp.io/src/html/layouts/ingrid.njk
+++ b/www.ingridapp.io/src/html/layouts/ingrid.njk
@@ -112,6 +112,16 @@
   </div>
 </footer>
 
+<!--[if !IE]> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- <![endif]-->
+<!--[if IE]>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<![endif]-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+<!-- Custom scripts for this template -->
+<script src="/assets/js/new-age.js"></script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
