--- a/www.ingridapp.io/src/html/layouts/ingrid.njk
+++ b/www.ingridapp.io/src/html/layouts/ingrid.njk
@@ -8,6 +8,11 @@
   />
   <title>{% block title %}{{ title }}{% endblock %}</title>
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+  <link rel="preconnect" href="https://res.cloudinary.com/">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="dns-resolve" href="https://www.googletagmanager.com/">
+  <link rel="dns-resolve" href="https://www.google-analytics.com/">
+  <link rel="dns-resolve" href="https://pipedrivewebforms.com/">
   {% block head %}{% endblock %}
   <meta name="author" content="TopMonks s.r.o." />
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200&amp;family=Lato&amp;family=Muli&amp;display=swap" rel="stylesheet">
