[caffe.topmonks.cz] content visibility

--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -323,6 +323,7 @@ ul#navigace {
 
 //* Section: Become a speaker! *//
 #speakers {
+  content-visibility: auto;
   h2 {
     font-weight: 700;
   }
@@ -350,6 +351,7 @@ ul#navigace {
 
 //* Section: Seance *//
 #seance {
+  content-visibility: auto;
   padding-top: 3em;
   h4 {
     margin: 0.5em 0;
