--- a/prodeti.topmonks.cz/src/html/index.njk
+++ b/prodeti.topmonks.cz/src/html/index.njk
@@ -12,8 +12,7 @@
   <link rel="dns-prefetch" href="https://stats.g.doubleclick.net">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link rel="preconnect" href="https://res.cloudinary.com">
-  <link rel=preload as=style href=https://use.typekit.net/her1ktw.css>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&amp;display=block">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&amp;display=swap">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -33,7 +32,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://prodeti.topmonks.cz/">
   <meta property="og:site_name" content="ProDeti.TopMonks.cz">
-  <script>(function (w, d, s, l, i) {
+  <script>(function(w, d, s, l, i) {
       w[l] = w[l] || [];
       w[l].push({
         "gtm.start":
@@ -46,7 +45,7 @@
         "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
       f.parentNode.insertBefore(j, f);
     })(window, document, "script", "dataLayer", "GTM-KJBJZ9M");</script>
-  <link rel=stylesheet href=https://use.typekit.net/her1ktw.css>
+  {% include "common/futura-lato.njk" %}
   <link rel="stylesheet" href="/assets/css/prodeti.css">
 </head>
 
