--- a/www.hlidacshopu.cz/src/html/priceterier/index.njk
+++ b/www.hlidacshopu.cz/src/html/priceterier/index.njk
@@ -1,10 +1,10 @@
 {% extends 'layouts/master.njk' %}
 {% from 'macros/helpers.njk' import sprite %}
-{% block title %}Přehled Black Friday 2019 na Hlídači shopů{% endblock %}
+{% block title %}Priceterier prototyp{% endblock %}
 
 {% block preload %}
   <link rel="modulepreload" href="https://unpkg.com/lit-html@1.1.1/lit-html.js?module" crossorigin/>
-  <link rel="preload" as="fetchSample" href="https://api.hlidacshopu.cz/shop-numbers" crossorigin/>
+  <link rel="preload" as="fetch" href="http://localhost:3000/priceterier/sampleData1.html" crossorigin/>
 {% endblock %}
 
 {% block styles %}
@@ -62,7 +62,7 @@
       <div class="layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>Black Friday 2019 v číslech</h2>
+            <h2>Priceterier Prototyp V1</h2>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <table class="shops-stats">
@@ -71,11 +71,13 @@
               </colgroup>
               <thead>
               <tr>
-                <th scope="col">E-shop</th>
-                <th scope="col">Produktů celkem</th>
-                <th scope="col">Produktů v Black Friday</th>
-                <th scope="col">Průměrná uváděná sleva</th>
-                <th scope="col">Průměrná reálná sleva</th>
+                <th scope="col">Pořadí</th>
+                <th scope="col">Reálná sleva v %</th>
+                <th scope="col">Finální cena</th>
+                <th scope="col">Reálná sleva v Kč</th>
+                <th scope="col">Produkt</th>
+                <th scope="col">Obrázek</th>
+                <th scope="col">Eshop</th>
               </tr>
               </thead>
               <tbody id="table-root">
@@ -98,19 +100,6 @@
               90 dní.
             </p>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>Otevřená data <small>beta</small></h2>
-            <p>
-              Otevíráme
-              <a
-                href="https://console.cloud.google.com/bigquery?p=hlidacshopu&d=hlidacshopu&t=allshops&page=table"
-              >naše data pro vaše analýzy</a>. Přístup k datům je zdarma,
-              avšak potřebujete mít vytvořený účet na
-              <a href="https://cloud.google.com/free/">Google Cloud Platform</a>
-              se zadanými platebními údaji. BigQuery má dostatečně velkorysé volné
-              kredity na to, abyste nemuseli za analýzu našich dat platit.
-            </p>
-          </div>
         </div>
       </div>
     </div>
@@ -118,5 +107,5 @@
 {% endblock %}
 
 {% block scripts %}
-  <script type="module" src="/assets/js/dashboard.js"></script>
+  <script type="module" src="/assets/js/priceterier.js"></script>
 {% endblock %}
