--- a/monkslab.cz/src/html/index.njk
+++ b/monkslab.cz/src/html/index.njk
@@ -448,8 +448,7 @@
   <div class="mdc-layout-grid layout-width">
     <div class="mdc-layout-grid__inner">
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop"
-      >
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <h2>Kde nás nájdete?</h2>
       </div>
       <div
