--- a/www.hlidacshopu.cz/src/html/priceterier/index.njk
+++ b/www.hlidacshopu.cz/src/html/priceterier/index.njk
@@ -73,10 +73,11 @@
               <tr>
                 <th scope="col">Pořadí</th>
                 <th scope="col">Reálná sleva v %</th>
-                <th scope="col">Finální cena</th>
+                <th scope="col">Původní cena v Kč</th>
                 <th scope="col">Reálná sleva v Kč</th>
-                <th scope="col">Produkt</th>
-                <th scope="col">Obrázek</th>
+                <th scope="col">Cena po slevě v Kč</th>
+                <th scope="col">Zlevněno od data</th>
+                <th scope="col">Produkt popis</th>
                 <th scope="col">Eshop</th>
               </tr>
               </thead>
