[www.hlidacshopu.cz] Set width and height to Browser icons

--- a/www.hlidacshopu.cz/src/html/index.njk
+++ b/www.hlidacshopu.cz/src/html/index.njk
@@ -308,6 +308,7 @@
                 <img
                   loading="lazy"
                   src="/assets/img/chrome.svg"
+                  width="42" height="42"
                   alt="Ikona prohlížeče Google Chrome"
                 />
               </div>
@@ -325,6 +326,7 @@
                 <img
                   loading="lazy"
                   src="/assets/img/firefox.svg"
+                  width="42" height="42"
                   alt="Ikona prohlížeče Firefox"
                 />
               </div>
@@ -340,6 +342,7 @@
                 <img
                   loading="lazy"
                   src="/assets/img/safari.svg"
+                  width="42" height="42"
                   alt="Ikona prohlížeče Safari"
                 />
               </div>
@@ -355,6 +358,7 @@
                 <img
                   loading="lazy"
                   src="/assets/img/brave.svg"
+                  width="40" height="47"
                   alt="Ikona prohlížeče Brave"
                 />
               </div>
@@ -370,6 +374,7 @@
                 <img
                   loading="lazy"
                   src="/assets/img/edge-beta.svg"
+                  width="42" height="42"
                   alt="Ikona prohlížeče Microsoft Edge Beta"
                 />
               </div>
@@ -383,6 +388,7 @@
               <img
                 loading="lazy"
                 src="/assets/img/opera.svg"
+                  width="42" height="42"
                 alt="Ikona prohlížeče Opera"
               />
             </div>
