[www.ingridapp.io] Add missing height to header image

--- a/www.ingridapp.io/src/html/index.njk
+++ b/www.ingridapp.io/src/html/index.njk
@@ -28,7 +28,7 @@
         </div>
         <div class="col-lg-7 my-auto">
           <div class="device-container text-center">
-            {{ image("header-mobile-preview.png", images, alt="Application screenshot", width=600, phoneWidth=440) }}
+            {{ image("header-mobile-preview.png", images, alt="Application screenshot", width=600, height=532, phoneWidth=440) }}
           </div>
         </div>
       </div>
